<resources>
    <string name="app_name">Bookshelf</string>
    <string name="home_fragment">home fragment</string>
    <string name="cart_fragment">cart fragment</string>
    <string name="favorite_fragment">favorite fragment</string>
    <string name="profile_fragment">profile_fragment</string>
    <string name="home_menu_item">home</string>
    <string name="cart_menu_item">cart</string>
    <string name="favorite_menu_item">favorite</string>
    <string name="profile_menu_item">profile</string>
    <string name="username">username</string>
    <string name="nickname">nickname</string>
    <string name="password">password</string>
    <string name="confirm_password">confirm password</string>
    <string name="password_edit_button">edit password</string>
    <string name="submit_button">submit</string>
    <string name="logout">logout</string>
    <string name="delete_account">delete account</string>
    <string name="signup_tab">signup</string>
    <string name="login_tab">login</string>
    <string name="remember_me">Remember me!</string>
    <string name="settings">settings</string>

    <!-- search -->
    <string name="title">title…</string>
    <string name="author">author…</string>
    <string name="publisher">publisher…</string>
    <string name="search">search</string>

    <string name="required">*</string>

    <!-- purchase -->
    <string name="address">Address</string>
    <string name="address_hint">enter your address…</string>
    <string name="arrival_date">Arrival Date</string>
    <string name="pick_date">pick arrival date</string>
    <string name="purchase">purchase</string>

    <!-- settings -->
    <string name="theme">theme</string>

    <!-- empty messages -->
    <string name="cart_is_empty">your cart is empty!</string>
    <string name="empty_favorite">your favorite list is empty!</string>

    <!-- book plceholders -->
    <string name="book_placeholder_author">By %1$s</string>
    <string name="book_placeholder_price">$%1$d</string>
    <string name="book_placeholder_rate">%1$d</string>

    <!-- book sample -->
    <string name="description_header">Description</string>
    <string name="comments_header">Comments</string>
    <string name="buy_book">Add to cart</string>
    <string name="submit_comment">submit your comment</string>
    <string name="book_sample_title">crime and punishment</string>
    <string name="book_sample_author">By Fyodor Dostoevsky</string>
    <string name="book_sample_price">$25.00</string>
    <string name="book_sample_rate">4.26</string>
    <string name="book_sample_description">Raskolnikov, a destitute and desperate former student, wanders through the slums of St Petersburg and commits a random murder without remorse or regret. He imagines himself to be a great man, a Napoleon: acting for a higher purpose beyond conventional moral law. But as he embarks on a dangerous game of cat and mouse with a suspicious police investigator, Raskolnikov is pursued by the growing voice of his conscience and finds the noose of his own guilt tightening around his neck. Only Sonya, a downtrodden sex worker, can offer the chance of redemption.</string>
    <string name="title_activity_book_details">BookDetailsActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>