<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginHorizontal="16dp"
    android:layout_marginVertical="8dp"
    tools:context=".PurchaseActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/arrival_date"
            android:textColor="?colorOnPrimaryContainer"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/required"
            android:textColor="@color/red"
            android:textSize="25sp"
            android:textStyle="bold" />

    </LinearLayout>

    <Button
        android:id="@+id/date_picker_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pick_date"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:textColor="?colorOnPrimaryContainer"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/required"
            android:textColor="@color/red"
            android:textSize="25sp"
            android:textStyle="bold" />

    </LinearLayout>

    <EditText
        android:id="@+id/address_text"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/edittext_background"
        android:inputType="textPostalAddress"
        android:padding="8dp"
        android:layout_marginTop="8dp"
        android:hint="@string/address_hint"
        android:gravity="top"/>



</LinearLayout>