<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginTabFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:padding="20dp">


        <EditText
            android:id="@+id/signupUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_background"
            android:layout_gravity="center"
            android:inputType="textPersonName"
            android:layout_marginTop="30dp"
            android:padding="8dp"
            android:autofillHints="username"
            android:hint="@string/username" />

        <EditText
            android:id="@+id/signupPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_background"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:padding="8dp"
            android:inputType="textPassword"
            android:autofillHints="password"
            android:hint="@string/password"/>

        <Button
            android:id="@+id/login_button"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:padding="8dp"
            android:textSize="18sp"
            android:text="@string/login_tab"/>
    </LinearLayout>

</LinearLayout>