<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="110dp"
    android:layout_marginTop="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/shapeableImageView"
            android:layout_width="63dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="0.20"
            android:src="@drawable/sample_book_cover"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/RoundedSquare" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="0.80"
            android:orientation="vertical"
            app:layout_constraintEnd_toStartOf="@+id/book_favorite_indicate"
            app:layout_constraintStart_toEndOf="@+id/shapeableImageView"
            app:layout_constraintTop_toTopOf="parent">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/book_sample_title"
                android:textColor="?colorOnSecondary"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/book_sample_author" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/linearLayout"
            app:layout_constraintStart_toStartOf="@+id/linearLayout">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/book_sample_price"
                android:textColor="?colorPrimary"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/round_star_rate_24" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/book_sample_rate"
                    android:textColor="?colorOnSecondary"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

        <ImageButton
            android:id="@+id/book_favorite_indicate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/settings"
            android:scaleType="fitCenter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/linearLayout"
            app:srcCompat="@drawable/round_favorite_border_24" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
