<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BookInfoActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="16dp"
            android:paddingVertical="32dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_container"
                android:minHeight="200dp"
                android:orientation="vertical"
                android:padding="16dp">


                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_gravity="center" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingTop="20dp"
                    android:text="@string/book_sample_title"
                    android:textColor="?colorOnSecondary"
                    android:textSize="25sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingTop="10dp"
                    android:text="@string/book_sample_author"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Description"
                    android:textColor="?colorOnSecondary"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/book_sample_price"
                    android:textColor="?colorPrimary"
                    android:textSize="25sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:lineSpacingMultiplier="1.3"
                android:paddingTop="20dp"
                android:text="@string/book_sample_description"
                android:textColor="?colorOnSecondary" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/buy_book" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="Comments"
                android:textColor="?colorOnSecondary"
                android:textSize="25sp"
                android:textStyle="bold" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/edittext_background"
                android:gravity="top|start"
                android:hint="write your comment..."
                android:inputType="textLongMessage"
                android:lines="8"
                android:paddingHorizontal="16dp"
                android:paddingVertical="4dp" />

        </LinearLayout>


    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>